# openbuildings_app

./: .gitignore  Open_Buildings_download_region_polygons_or_points_.ipynb  README.md  file_manager.py  google_openbuildings.py  main.py  map_features.py  openbuildings.py  packages.txt  pyproject.toml  requirements.txt  s2geometry-0.9.0-cp310-cp310-linux_x86_64.whl
